--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.3.1",
+    "ethers": "^5.4.0",
     "hardhat": "^2.4.0"
+  },
+  "dependencies": {
+    "antd": "^4.16.6",
+    "create-react-app": "^4.0.3",
+    "react-blockies": "^1.4.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "walletconnect": "^1.4.1",
+    "web3modal": "^1.9.3"
   }
 }
