--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "ethers": "^5.4.0",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
+    "walletconnect": "^1.4.1",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.6"
+    "web3": "^1.3.6",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
